<?php

class Users {
    private $login;
}

